Stable-Diffusion-UI-Novel/yuanxiao_kubernetes/0_public_ubuntu_server/deployment_ubuntu_test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-2204
  namespace: default  # 如果不是这个命名空间,则修改
  labels:
    app: ubuntu-2204 # change_other_model
spec:
  volumes:
    - name: stable-diffusion-storage
      persistentVolumeClaim:
        claimName: vol1
  containers:
    - name: ubuntu-2204
      image: ubuntu:22.04
      command: ["bash","-c","while true;do date;sleep 86400;done"]
      args:
        - /nginx-ingress-controller
        - --tcp-services-configmap=default/ubuntu-2204-configmap
      volumeMounts:
        - mountPath: "/yuanxiao_root_nfs"
          name: stable-diffusion-storage
          # subPath: "/" # 不允许这样写,会报错
          subPath: #这样写不会报错,也是挂载到filestore的根目录,后面留个空格即可
